Fix color scheme switching

--- a/public/components/side-nav/side-nav.html
+++ b/public/components/side-nav/side-nav.html
@@ -6,7 +6,7 @@
           <a class="side-nav__nav__link-list__item__link" href="/">Home</a>
         </li>
         <li class="side-nav__nav__link-list__item">
-          <a class="side-nav__nav__link-list__item__link" href="/pages/colors">Colors</a>
+          <a class="side-nav__nav__link-list__item__link" href="/pages/colors.html">Colors</a>
         </li>
       </ul>
       <slot></slot>
