--- a/public/index.css
+++ b/public/index.css
@@ -16,8 +16,8 @@ html {
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: hsl(var(--color-gray-100));
-  background-color: hsl(var(--color-gray-900));
+  color: hsl(var(--color-gray-900));
+  background-color: white;
 }
 
 a {
