--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,45 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
+
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
 
 :root {
   --content-max-width: 80ch;
@@ -10,12 +49,11 @@
   --viewport-height: 100vh;
 }
 
-html {
-}
-
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.65;
+  font-family: -apple-system, 'Helvetica Neue', BlinkMacSystemFont, 'Segoe UI', sans-serif;
   color: hsl(var(--color-gray-900));
   background-color: white;
 }
@@ -27,15 +65,6 @@ a {
 body[data-color-scheme="dark"] {
   color: hsl(var(--color-gray-100));
   background-color: hsl(var(--color-gray-900));
-}
-
-a,
-p,
-button,
-input,
-textarea {
-  font-size: 1rem;
-  font-weight: 400;
 }
 
 h6 {
@@ -68,10 +97,6 @@ h1 {
   font-weight: 900;
 }
 
-p {
-  line-height: 1.65;
-}
-
 ol,
 ul,
 dl {
@@ -80,19 +105,17 @@ dl {
   margin: 0;
 }
 
-.content-wrapper {
-  padding: 1rem 1.5rem;
-}
-
-@media screen and (min-width: 48rem) {
-  .content-wrapper {
-    --content-padding-x: max(
-      2rem,
-      calc(
-        (var(--viewport-width) - var(--sidebar-width) - var(--content-max-width)) / 2
-      )
-    );
-
-    padding: 1rem var(--content-padding-x) 1rem var(--content-padding-x);
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
   }
 }
